--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+body{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 200px;
+}
+.logo{
+  width: 90%;
+  height: 90%;
+  margin-left: -100px;
+  margin-top: -100px;
+}
+.main-sect{
+  margin-right: 300px;
+}
+h1{
+  font-size: 64px;
+  margin-right: -300px;
+}
+h2{
+  font-size: 30px;
+}
+button{
+  font-weight: 900;
+  width: 240px;
+  height: 40px;
+  font-size: medium;
+  border-radius: 20px;
+  background-color: white;
+  border-color: rgb(202, 193, 193);
+}
+.create-account{
   color: white;
+  background-color: rgba(0, 183, 255, 0.933);
 }
-
-.App-link {
-  color: #61dafb;
+.signIn{
+  color: rgba(0, 183, 255, 0.933);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.terms{
+  font-size: 10px;
 }
